--- a/views/admin/users/create_user.ejs
+++ b/views/admin/users/create_user.ejs
@@ -2,4 +2,19 @@
 
 <h1>create user</h1>
 
+<form action="/user/save" method="POST">
+  <div>
+    <label for="name">Nome</label>
+    <input type="text" name="name" id="name", required>
+  </div>
+  <div>
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email", required>
+  </div>
+  <div>
+    <label for="password">Senha</label>
+    <input type="password" name="password" id="password", required>
+  </div>
+  <button type="submit">Criar</button>
+
 <%- include('../../partials/footer') %>
