--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/users/create">Criar Usuário</a></li>
-                <li><a href="/about">Sobre</a></li>
+    <header class="header">
+        <nav class="menu">
+            <ul class="menu-list">
+              <li class="menu-item"><a href="#">Home</a></li>
+              <li class="menu-item"><a href="#">About</a></li>
+              <li class="menu-item"><a href="#">Services</a></li>
+              <li class="menu-item"><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
