--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #f8f9fa;
+    font-family: "IBM Plex Sans", sans-serif;
 }
 
 .footer {
@@ -44,7 +45,7 @@ body {
     font-size: 1rem;
     padding: 0.5rem 0;
     display: inline-block;
-    transition: color 0.3s ease;
+    transition: color 0.4s ease;
 }
 
 .menu-item a:hover {
@@ -60,7 +61,7 @@ body {
     width: 0;
     height: 2px;
     background-color: #f39c12;
-    transition: width 0.3s ease;
+    transition: width 0.4s ease;
 }
 
 .menu-item:hover::after {
