--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title> <!-- Título dinâmico para cada página -->
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Sans">
 </head>
 <body>
     <header class="header">
         <nav class="menu">
             <ul class="menu-list">
-              <li class="menu-item"><a href="#">Home</a></li>
-              <li class="menu-item"><a href="#">About</a></li>
+              <li class="menu-item"><a href="/">Home</a></li>
+              <li class="menu-item"><a href="/users/create">Criar Conta</a></li>
               <li class="menu-item"><a href="#">Services</a></li>
               <li class="menu-item"><a href="#">Contact</a></li>
             </ul>
