--- a/views/admin/users/create_user.ejs
+++ b/views/admin/users/create_user.ejs
@@ -1,23 +1,22 @@
 <%- include('../../partials/header', { title: 'Criar Usuário' }) %>
 
-
-<div class="background-container">
+<div class="background-container" style="background-image: url('../img/fundo_01.jpg');">
     <div class="page-title">
         <h1>Criar Conta</h1>
     </div>
-  <div class="form-container">    
-    <form action="/user/save" method="POST">
-        <div>
-            <input type="text" name="name" id="name" placeholder="Nome" required>
-        </div>
-        <div>
-            <input type="email" name="email" id="email" placeholder="Email" required>
-        </div>
-        <div>
-            <input type="password" name="password" id="password" placeholder="Senha" required>
-        </div>
-        <button class="btn" type="submit">Criar</button>
-    </form>
+    <div class="form-container">    
+        <form action="/user/save" method="POST">
+            <div>
+                <input type="text" name="name" id="name" placeholder="Nome" required>
+            </div>
+            <div>
+                <input type="email" name="email" id="email" placeholder="Email" required>
+            </div>
+            <div>
+                <input type="password" name="password" id="password" placeholder="Senha" required>
+            </div>
+            <button class="btn" type="submit">Criar</button>
+        </form>
     </div>
 </div>
 
