--- a/views/admin/users/login_user.ejs
+++ b/views/admin/users/login_user.ejs
@@ -1,21 +1,20 @@
 <%- include('../../partials/header', { title: 'Login' }) %>
 
-<div class="background-container">
+<div class="background-container" style="background-image: url('../img/fundo_02.jpg');">
     <div class="page-title">
         <h1>Login</h1>
     </div>
-  <div class="form-container">    
-    <form action="/user/authenticate" method="POST">
-        <div>
-            <input type="email" name="email" id="email" placeholder="Email" required>
-        </div>
-        <div>
-            <input type="password" name="password" id="password" placeholder="Senha" required>
-        </div>
-        <button class="btn" type="submit">Logar</button>
-    </form>
+    <div class="form-container">    
+        <form action="/user/authenticate" method="POST">
+            <div>
+                <input type="email" name="email" id="email" placeholder="Email" required>
+            </div>
+            <div>
+                <input type="password" name="password" id="password" placeholder="Senha" required>
+            </div>
+            <button class="btn" type="submit">Logar</button>
+        </form>
     </div>
 </div>
-
 
 <%- include('../../partials/footer') %>
