--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
             <ul class="menu-list">
               <li class="menu-item"><a href="/">Home</a></li>
               <li class="menu-item"><a href="/users/create">Criar Conta</a></li>
-              <li class="menu-item"><a href="#">Services</a></li>
+              <li class="menu-item"><a href="/user/login">Login</a></li>
               <li class="menu-item"><a href="#">Contact</a></li>
             </ul>
         </nav>
