--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,16 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
 body {
-    background-color: #f8f9fa;
+    background-color: #F0F4F8; /* Cor de fundo */
     font-family: "IBM Plex Sans", sans-serif;
+    color: #1E293B; /* Cor de texto */
 }
 
 .footer {
-    background-color: #343a40;
-    color: white;
+    background-color: #1E3A8A; /* Azul principal */
+    color: #F0F4F8; /* Cor de fundo */
     text-align: center;
     padding: 0.5rem;
     position: fixed;
@@ -23,10 +24,10 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: rgba(52, 58, 64, 0.85);
+    background-color: rgba(30, 58, 138, 0.85); /* Azul principal com transparência */
     padding: 0.3rem;
-  }
-  
+}
+
 .menu-list {
     display: flex;
     list-style: none;
@@ -41,7 +42,7 @@ body {
 
 .menu-item a {
     text-decoration: none;
-    color: #fff;
+    color: #F0F4F8; /* Cor de fundo */
     font-size: 1rem;
     padding: 0.5rem 0;
     display: inline-block;
@@ -49,7 +50,7 @@ body {
 }
 
 .menu-item a:hover {
-    color: #f39c12;
+    color: #FFD700; /* Cor de destaque */
 }
 
 /* Linha animada ao passar o mouse */
@@ -60,7 +61,7 @@ body {
     left: 0;
     width: 0;
     height: 2px;
-    background-color: #f39c12;
+    background-color: #FFD700; /* Cor de destaque */
     transition: width 0.4s ease;
 }
 
@@ -71,11 +72,10 @@ body {
 .page-title {
     text-align: center;
     font-size: 1.5rem;
-    color: #fff;
+    color: #32405a; /* Cor de texto */
     margin-bottom: 1rem; 
     transform: translateY(-20px);
 }
-
 
 .background-container {
     background-size: cover;
@@ -85,7 +85,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #1E293B; /* Cor de texto */
     text-align: center;
 }
 
@@ -94,31 +94,32 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 400px; 
+    max-width: 370px; 
     height: auto; 
     padding: 2rem;
-    background-color: rgba(146, 163, 182, 0.85); 
+    background-color: rgba(147, 197, 253, 0.85); /* Azul claro com transparência */
     border-radius: 25px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     transform: translateY(-30px);
 }
 
 .form-container input {
-    width: 100%; /* Mantém a largura ajustável dentro do container */
-    max-width: 700px; /* Aumenta o valor máximo da largura */
-    height: 2.7rem; /* Define uma altura maior */
-    padding: 1rem; /* Adiciona mais preenchimento interno */
+    width: 100%; 
+    max-width: 800px; 
+    height: 2.7rem; 
+    padding: 1rem; 
     margin: 0.5rem 0;
     border-radius: 5px;
     border: none;
-    font-size: 1rem; /* Aumenta o tamanho do texto */
+    font-size: 1rem; 
+    background-color: #F0F4F8; /* Cor de fundo */
+    color: #1E293B; /* Cor de texto */
 }
-
 
 .btn {
     margin-top: 0.5rem;
-    background-color: #f39c12;
-    color: white;
+    background-color: #3B82F6; /* Azul secundário */
+    color: #F0F4F8; /* Cor de fundo */
     padding: 0.7rem 1.8rem;
     border: none;
     border-radius: 8px;
@@ -127,28 +128,28 @@ body {
 }
 
 .btn:hover {
-    background-color: #e67e22; 
+    background-color: #2563EB; /* Azul secundário mais escuro */
 }
 
 .expired-session {
     text-align: center;
-    background-color: #fff;
-    padding: 20px;
+    background-color: #93C5FD; /* Azul claro */
+    padding: 1.2rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .expired-session h1 {
-    color: #d9534f;
+    color: #1E3A8A; /* Azul principal */
 }
 
 .expired-session p {
-    font-size: 18px;
-    color: #333;
+    font-size: 1rem;
+    color: #1E293B; /* Cor de texto */
 }
 
 .expired-session a {
-    color: #5bc0de;
+    color: #3B82F6; /* Azul secundário */
     text-decoration: none;
 }
 
@@ -170,12 +171,7 @@ fieldset {
     border: 1px solid #ccc;
     padding: 1rem;
     border-radius: 8px;
-}
-
-.radio-group {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
+    background-color: #F0F4F8; /* Cor de fundo */
 }
 
 
@@ -183,10 +179,12 @@ fieldset {
 .form-group input[type="number"],
 .form-group input[type="date"] {
     width: 100%;
-    padding: 10px;
+    padding: 0.8rem;
     border: 1px solid #ccc;
     border-radius: 7px;
     font-size: 1rem;
+    background-color: #F0F4F8; /* Cor de fundo */
+    color: #1E293B; /* Cor de texto */
 }
 
 .input-number {
@@ -195,52 +193,31 @@ fieldset {
 }
 
 
-.radio-group {
-    display: flex;
-    gap: 1rem;
-}
-
-.radio-group input[type="radio"] {
-    display: none;
-}
-
-.radio-group label {
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    text-align: center;
-    transition: background-color 0.3s ease;
-}
-
 .btn-priority.high {
-    background-color: #da2121;
+    background-color: #EF4444; /* Vermelho */
     color: #fff;
 }
 
 .btn-priority.medium {
-    background-color: #d5e21e;
+    background-color: #f1f50b; /* Laranja */
     color: #333;
 }
 
 .btn-priority.low {
-    background-color: #1dc018f6;
+    background-color: #39a717; /* Verde */
     color: #fff;
 }
 
 .btn-finalizado.yes {
-    background-color: #1dc018f6;
+    background-color: #39a717; /* Verde */
     color: #fff;
 }
 
 .btn-finalizado.no {
-    background-color: #da2121;
+    background-color: #EF4444; /* Vermelho */
     color: #fff;
 }
 
-.radio-group input[type="radio"]:checked + label {
-    opacity: 0.8;
-}
 
 .form-actions {
     display: flex;
@@ -252,26 +229,46 @@ fieldset {
 .btn-cancel {
     padding: 0.5rem 1rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1rem;
     transition: background-color 0.3s ease;
 }
 
 .btn-submit {
-    background-color: #007bff;
-    color: #fff;
+    background-color: #1E3A8A; /* Azul principal */
+    color: #F0F4F8; /* Cor de fundo */
 }
 
 .btn-submit:hover {
-    background-color: #0056b3;
+    background-color: #3f67d3; /* Azul principal mais escuro */
 }
 
 .btn-cancel {
-    background-color: #da2121;
+    background-color: #EF4444; /* Vermelho */
     color: #fff;
 }
 
 .btn-cancel:hover {
-    background-color: #631111;
+    background-color: #6b1b1b; /* Vermelho mais escuro */
 }
+
+.checkbox-group input[type="checkbox"] {
+    display: none;
+}
+
+.checkbox-group label {
+    padding: 0.5rem 1.2rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    text-align: center;
+    margin-right: 0.5rem;
+    user-select: none;
+    transition: background-color 0.3s ease;
+}
+
+.checkbox-group input[type="checkbox"]:checked + label {
+    opacity: 0.4;
+}
+
