--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -232,7 +232,7 @@ fieldset {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.2s;
 }
 
 .btn-submit {
@@ -253,22 +253,55 @@ fieldset {
     background-color: #6b1b1b; /* Vermelho mais escuro */
 }
 
-.checkbox-group input[type="checkbox"] {
-    display: none;
+.btn-cancel:hover, .btn-submit:hover {
+    transform: scale(1.05);
 }
 
-.checkbox-group label {
-    padding: 0.5rem 1.2rem;
-    border-radius: 5px;
+
+.radio-group {
+    display: flex;
+    justify-content: center;
+}
+
+.radio-group input[type="radio"] {
+    display: none; /* Esconde o rádio padrão */
+}
+
+.radio-group label {
+    display: inline-block;
+    padding: 0.6rem 1.5rem;
+    border-radius: 8px;
     cursor: pointer;
-    font-size: 0.8rem;
-    text-align: center;
     margin-right: 0.5rem;
+    margin-top: 0.2rem;
+    font-size: 0.9rem;
+    color: white;
+    text-align: center;
     user-select: none;
-    transition: background-color 0.3s ease;
+    transition: opacity 0.3s, transform 0.2s;
 }
 
-.checkbox-group input[type="checkbox"]:checked + label {
-    opacity: 0.4;
+.radio-group label:hover {
+    transform: scale(1.05);
+}
+
+/* Estilos personalizados para cada botão */
+.btn-priority.high {
+    background-color: #EF4444;
+}
+
+.btn-priority.medium {
+    background-color: #FFD700;
+    color: #1E293B;
+}
+
+.btn-priority.low {
+    background-color: #39a717;
+}
+
+/* Seleção ativa */
+.radio-group input[type="radio"]:checked + label {
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+    opacity: 0.6;
 }
 
