--- a/views/admin/products/create_product.ejs
+++ b/views/admin/products/create_product.ejs
@@ -36,10 +36,10 @@
             <fieldset class="form-group" id="finalizado-group">
                 <legend>Finalizado*</legend>
                 <div class="radio-group">
-                    <input type="radio" name="finalizado" id="finalizado-sim" value="Sim">
+                    <input type="radio" name="finished" id="finalizado-sim" value="Sim">
                     <label for="finalizado-sim" class="btn-finalizado yes">Sim</label>
     
-                    <input type="radio" name="finalizado" id="finalizado-nao" value="Nao">
+                    <input type="radio" name="finished" id="finalizado-nao" value="Nao">
                     <label for="finalizado-nao" class="btn-finalizado no">Não</label>
                 </div>
             </fieldset>
