--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title> <!-- Título dinâmico para cada página -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo">
 </head>
 <body>
     <header class="header">
