--- a/views/admin/users/expired_session.ejs
+++ b/views/admin/users/expired_session.ejs
@@ -41,5 +41,6 @@
     <h1>Sessão Expirada</h1>
     <p>Sua sessão expirou. Por favor, faça login novamente para continuar.</p>
     <a href="/user/login">Fazer Login</a>
+    <a href="/users/create">Criar Conta</a>
 </div>
 <%- include('../../partials/footer') %>
