--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,10 +15,10 @@
               <li class="menu-item"><a href="/">Home</a></li>
               <li class="menu-item"><a href="/users/create">Criar Conta</a></li>
               <% if (user) { %>
-                  <!-- Exibe o link "Adicionar Produto" apenas se o usuário estiver logado -->
                   <li class="menu-item"><a href="/product/create">Adicionar Produto</a></li>
+                  <li class="menu-item"><a href="/products">Lista</a></li>
+                  <li class="menu-item"><a href="/logout">Logout</a></li>
               <% } else { %>
-                  <!-- Exibe o link "Login" apenas se o usuário NÃO estiver logado -->
                   <li class="menu-item"><a href="/user/login">Login</a></li>
               <% } %>
             </ul>
