--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,62 +1,64 @@
 <%- include('./partials/header', { title: 'Home' }) %>
 
-<table class="styled-table">
-    <thead>
-        <tr>
-            <th>Nome <div class="resizer"></div></th>
-            <th>Preço <div class="resizer"></div></th>
-            <th>Prioridade <div class="resizer"></div></th>
-            <th>Finalizado <div class="resizer"></div></th>
-            <th>Ações <div class="resizer"></div></th>
-        </tr>
-    </thead>
-    <tbody>
-        <% products.forEach(product => { %>
-            <tr>
-                <td>
-                    <div class="image_table">
-                        <span><%= product.name %></span>
-                        <img src="../img/produtos.png" alt="Ícone">
-                    </div>
-                </td>
-                <td>
-                    <div class="image_table">
-                        <span><%= product.price %></span>
-                        <img src="../img/dinheiro.png" alt="Ícone">
-                    </div>
-                </td>
-                <td>
-                    <div class="image_table">
-                        <span><%= product.priority %></span>
-                        <% if (product.priority === 'Alta') { %>
-                            <img src="../img/alta.png" alt="Ícone Alta">
-                        <% } else if (product.priority === 'Medio') { %>
-                            <img src="../img/media.png" alt="Ícone Média">
-                        <% } else { %>
-                            <img src="../img/baixo.png" alt="Ícone Baixa">
-                        <% } %>
-                    </div>
-                </td>
-                
-                <td>
-                    <div class="image_table">
-                        <span><%= product.finished %></span>
-                        <% if (product.finished === 'Sim') { %>
-                            <img src="../img/sim.png" alt="Ícone Alta">
-                        <% } else { %>
-                            <img src="../img/nao.png" alt="Ícone Baixa">
-                        <% } %>
-                    </div>
-                </td>
-                <td>
-                    <a href="/product/edit/<%= product.id %>" class="details-link">Detalhes</a>
-                </td>
-            </tr>
-              
-        <% }) %>
-    </tbody>
-</table>
 
+<div class="table-container">
+    <table class="styled-table">
+        <thead>
+            <tr>
+                <th>Nome <div class="resizer"></div></th>
+                <th>Preço <div class="resizer"></div></th>
+                <th>Prioridade <div class="resizer"></div></th>
+                <th>Finalizado <div class="resizer"></div></th>
+                <th>Ações <div class="resizer"></div></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% products.forEach(product => { %>
+                <tr>
+                    <td>
+                        <div class="image_table">
+                            <span><%= product.name %></span>
+                            <img src="../img/produtos.png" alt="Ícone">
+                        </div>
+                    </td>
+                    <td>
+                        <div class="image_table">
+                            <span><%= product.price %></span>
+                            <img src="../img/dinheiro.png" alt="Ícone">
+                        </div>
+                    </td>
+                    <td>
+                        <div class="image_table">
+                            <span><%= product.priority %></span>
+                            <% if (product.priority === 'Alta') { %>
+                                <img src="../img/alta.png" alt="Ícone Alta">
+                            <% } else if (product.priority === 'Medio') { %>
+                                <img src="../img/media.png" alt="Ícone Média">
+                            <% } else { %>
+                                <img src="../img/baixo.png" alt="Ícone Baixa">
+                            <% } %>
+                        </div>
+                    </td>
+                    
+                    <td>
+                        <div class="image_table">
+                            <span><%= product.finished %></span>
+                            <% if (product.finished === 'Sim') { %>
+                                <img src="../img/sim.png" alt="Ícone Alta">
+                            <% } else { %>
+                                <img src="../img/nao.png" alt="Ícone Baixa">
+                            <% } %>
+                        </div>
+                    </td>
+                    <td>
+                        <a href="/product/edit/<%= product.id %>" class="details-link">Detalhes</a>
+                    </td>
+                </tr>
+            <% }) %>
+        </tbody>
+    </table>
+    <div class="resizer" data-resizer="table"></div>
+</div>
 
 <%- include('./partials/footer') %>
 
@@ -64,6 +66,32 @@
     document.addEventListener('DOMContentLoaded', function() {
         const resizableTable = document.querySelector('.styled-table');
         const thElements = resizableTable.querySelectorAll('th');
+        const rows = document.querySelectorAll('.styled-table tbody tr');
+
+        rows.forEach(row => {
+        const resizer = document.createElement('div');
+        resizer.classList.add('row-resizer');
+        row.appendChild(resizer);
+
+        let startY, startHeight;
+
+        resizer.addEventListener('mousedown', (e) => {
+            startY = e.clientY;
+            startHeight = row.offsetHeight;
+
+            document.addEventListener('mousemove', resizeRow);
+            document.addEventListener('mouseup', stopResize);
+        });
+
+        function resizeRow(e) {
+            const newHeight = startHeight + (e.clientY - startY);
+            row.style.height = `${newHeight}px`;
+        }
+
+        function stopResize() {
+            document.removeEventListener('mousemove', resizeRow);
+            document.removeEventListener('mouseup', stopResize);
+        }
 
         thElements.forEach(th => {
             const resizer = th.querySelector('.resizer');
@@ -86,5 +114,6 @@
                 document.removeEventListener('mouseup', stopResize);
             }
         });
+    });
     });
 </script>
