--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,7 @@
                         </div>
                     </td>
                     <td>
-                        <a href="/product/edit/<%= product.id %>" class="details-link">Detalhes</a>
+                        <a href="/product/detail/<%= product.id %>" class="details-link">Detalhes</a>
                     </td>
                 </tr>
             <% }) %>
