--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -453,6 +453,7 @@ fieldset {
     padding: 0.8rem 1.6rem;
     border-radius: 12px;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 .btn-edit:hover {
     background-color: #FFD54F;
