--- a/views/admin/products/edit_product.ejs
+++ b/views/admin/products/edit_product.ejs
@@ -1,56 +1,58 @@
-<%- include('../../partials/header', { title: 'Cadastro de Produto' }) %>
+<%- include('../../partials/header', { title: 'Editar' }) %>
 
-<div class="background-container" style="background-image: url('../img/fundo_04.jpg');">
+<div class="background-container" style="background-image: url('/img/fundo_04.jpg');">
     <div class="page-title">
-        <h3>Cadastrar Produto</h3>
+        <h3>Editar Produto</h3>
     </div>
     <div class="form-container">   
-        <form action="/product/save" method="POST">
+        <form action="/product/update" method="POST">
+            <input type="hidden" name="id" value="<%= product.id %>">
             <div class="form-group">
                 <label for="name">Item*</label>
-                <input type="text" name="name" id="name" placeholder="Nome do item" required>
+                <input type="text" name="name" id="name" value="<%= product.name %>" required>
             </div>
 
             <div class="form-group">
                 <label for="price">Preço Estimado*</label>
                 <div class="input-number">
-                    <input type="number" name="price" id="price" placeholder="0,00" step="0.01" required>
+                    <input type="number" name="price" id="price" value="<%= product.price %>" step="0.01" required>
                 </div>
             </div>
 
             <fieldset class="form-group" id="priority-group">
                 <legend>Prioridade*</legend>
                 <div class="radio-group">
-                    <input type="radio" name="priority" id="priority-high" value="Alta">
+                    <input type="radio" name="priority" id="priority-high" value="Alta" <%= product.priority === "Alta" ? "checked" : "" %>>
                     <label for="priority-high" class="btn-priority high">Alta</label>
-            
-                    <input type="radio" name="priority" id="priority-medium" value="Medio">
+                    
+                    <input type="radio" name="priority" id="priority-medium" value="Medio" <%= product.priority === "Medio" ? "checked" : "" %>>
                     <label for="priority-medium" class="btn-priority medium">Média</label>
-            
-                    <input type="radio" name="priority" id="priority-low" value="Baixo">
+                    
+                    <input type="radio" name="priority" id="priority-low" value="Baixo" <%= product.priority === "Baixo" ? "checked" : "" %>>
                     <label for="priority-low" class="btn-priority low">Baixa</label>
                 </div>
             </fieldset>
-                    
+            
 
             <fieldset class="form-group" id="finalizado-group">
                 <legend>Finalizado*</legend>
                 <div class="radio-group">
-                    <input type="radio" name="finished" id="finalizado-sim" value="Sim">
+                    <input type="radio" name="finished" id="finalizado-sim" value="Sim" <%= product.finished === "Sim" ? "checked" : "" %>>
                     <label for="finalizado-sim" class="btn-finalizado yes">Sim</label>
-    
-                    <input type="radio" name="finished" id="finalizado-nao" value="Nao">
+            
+                    <input type="radio" name="finished" id="finalizado-nao" value="Nao" <%= product.finished === "Nao" ? "checked" : "" %>>
                     <label for="finalizado-nao" class="btn-finalizado no">Não</label>
                 </div>
             </fieldset>
+            
 
             <div class="form-group">
                 <label for="date">Data*</label>
-                <input type="date" name="date" id="date" required>
+                <input type="date" name="date" id="date" value="<%= product.date || '' %>" required>
             </div>
 
             <div class="form-actions">
-                <button class="btn-submit" type="submit">Cadastrar</button>
+                <button class="btn-submit" type="submit">Editar</button>
                 <button type="reset" class="btn-cancel">Cancelar</button>
             </div>
         </form>
