feat: filtros adicionados

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,20 @@
 
 
 <div class="table-container">
+    <div class="filter-search-container">
+        <div class="filter">
+            <span class="filter-label">Filtros:</span>
+            <a href="/products/sim" class="btn-filter">Sim</a>
+            <a href="/products" class="btn-filter">Tudo</a>
+            <a href="/products/nao" class="btn-filter">Nao</a>
+        </div>
+    
+        <div class="search-bar">
+            <input type="text" placeholder="Pesquisar..." class="search-input">
+        </div>
+    </div>
+    
+    
     <table class="styled-table">
         <thead>
             <tr>
