--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -306,12 +306,69 @@ fieldset {
     opacity: 0.6;
 }
 
+.filter-search-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 0.5rem;
+    margin-top: 1rem;
+}
+
+.search-bar {
+    flex-grow: 1;
+    text-align: center;
+    margin-right: 10rem;
+}
+
+.search-input {
+    width: 50%;
+    max-width: 400px;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+
+
+.filter {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+    margin-left: 2rem;
+}
+
+.filter-label {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-right: 0.5rem;
+    color: #009879;
+}   
+
+
+.btn-filter {
+    background-color: #1E3A8A; /* Azul principal */
+    color: #F0F4F8; /* Cor de fundo */
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 6px;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 0.7rem;
+    margin-right: 0.5rem;
+    transition: all 0.3s ease;
+}
+
+.btn-filter:hover {
+    background-color: #3f67d3;
+    transform: translateY(-2px);
+}
 
 .styled-table {
     width: 98%;
     border-collapse: collapse;
     margin: 0 auto;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     font-size: 1em;
     font-family: 'Archivo', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f3f3f3;
