--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,8 @@
         </div>
     
         <div class="search-bar">
-            <input type="text" placeholder="Pesquisar..." class="search-input">
+            <input type="text" id="searchInput" placeholder="Pesquisar..." class="search-input">
+            <button id="searchButton">Pesquisar</button>
         </div>
     </div>
     
@@ -129,5 +130,27 @@
             }
         });
     });
+    });
+</script>
+
+<script>
+    document.getElementById('searchButton').addEventListener('click', function() {
+        const searchTerm = document.getElementById('searchInput').value.trim();
+        if (searchTerm) {
+            window.location.href = `/products/search?term=${encodeURIComponent(searchTerm)}`;
+        } else {
+            window.location.href = `/products`;
+        }
+    });
+
+    document.getElementById('searchInput').addEventListener('keyup', function(event) {
+        if (event.key === 'Enter') {
+            const searchTerm = this.value.trim();
+            if (searchTerm) {
+                window.location.href = `/products/search?term=${encodeURIComponent(searchTerm)}`;
+            } else {
+                window.location.href = `/products`;
+            }
+        }
     });
 </script>
