--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,7 @@ body {
 
 .menu-list {
     display: flex;
+    align-items: center;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -551,4 +552,44 @@ fieldset {
 #searchButton:hover {
     background-color: #3f67d3;
     transform: translateY(-2px);
+}
+
+.dropdown {
+    position: relative;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Alinha o dropdown à direita */
+.menu-item.dropdown.right {
+    margin-left: auto; 
+}
+
+
+.dropdown.right .dropdown-content {
+    right: 0;
 }
