--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,12 +12,19 @@
     <header class="header">
         <nav class="menu">
             <ul class="menu-list">
-              <li class="menu-item"><a href="/">Home</a></li>
+              <li class="menu-item"><a href="/products">Home</a></li>
               <li class="menu-item"><a href="/users/create">Criar Conta</a></li>
               <% if (user) { %>
                   <li class="menu-item"><a href="/product/create">Adicionar Produto</a></li>
                   <li class="menu-item"><a href="/products">Lista</a></li>
-                  <li class="menu-item"><a href="/logout">Logout</a></li>
+                  <li class="menu-item dropdown right">
+                    <a href="#" class="dropbtn"><%= user.username %></a>
+                    <div class="dropdown-content">
+                        <a href="/profile">Perfil</a>
+                        <a href="/change-password">Alterar senha</a>
+                        <a href="/logout">Sair</a>
+                    </div>
+                </li>
               <% } else { %>
                   <li class="menu-item"><a href="/user/login">Login</a></li>
               <% } %>
