--- a/views/admin/products/create_product.ejs
+++ b/views/admin/products/create_product.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header', { title: 'Cadastro de Produto' }) %>
+<%- include('../../partials/header', { title: 'Cadastro de Produto', user: user }) %>
 
 <div class="background-container" style="background-image: url('../img/fundo_04.jpg');">
     <div class="page-title">
