--- a/views/admin/users/login_user.ejs
+++ b/views/admin/users/login_user.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header', { title: 'Login' }) %>
+<%- include('../../partials/header', { title: 'Login', user: user }) %>
 
 <div class="background-container" style="background-image: url('../img/fundo_02.jpg');">
     <div class="page-title">
