--- a/views/admin/users/create_user.ejs
+++ b/views/admin/users/create_user.ejs
@@ -14,13 +14,22 @@
         <div class="form-container">    
             <form action="/user/save" method="POST">
                 <div>
-                    <input type="text" name="name" id="name" placeholder="Nome" required>
+                    <input type="text" name="username" id="username" placeholder="Nome" value="<%= username %>" required>
+                    <div class="form_error">
+                        <%= username_err %>
+                    </div>
                 </div>
                 <div>
-                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <input type="email" name="email" id="email" placeholder="Email" value="<%= email %>"  required>
+                    <div class="form_error">
+                        <%= email_err %>
+                    </div>
                 </div>
                 <div>
-                    <input type="password" name="password" id="password" placeholder="Senha" required>
+                    <input type="password" name="password" id="password" placeholder="Senha" value="<%= password %>"  required>
+                    <div class="form_error">
+                        <%= password_err %>
+                    </div>
                 </div>
                 <button class="btn" type="submit">Criar</button>
             </form>
